# srccat

./: CMakeLists.txt  esc_color.cpp  esc_color.h  esc_highlight.cpp  esc_highlight.h  pager.cpp  pager.h  srccat.cpp
cmake/: FindMagic.cmake
i18n/: CMakeLists.txt  srccat_en.ts  srccat_i18n.qrc.in
